# polly2earlinetDB

./: .gitignore  AUTHORS  CHANGELOG  LICENSE  TODO  bash_script.py  convert_polly_2_earlinet.py  log  low_base_script.py  plot_script.py  readme.md  requirements.txt  setup.cfg  setup.py
config/: Antikythera_campaign_info.toml  Cabauw_campaign_info.toml  Dushanbe_campaign_info.toml  Dushanbe_campaign_info_1.toml  Dushanbe_campaign_info_2.toml  Evora_campaign_info.toml  Finokalia_campaign_info.toml  HPB_campaign_info.toml  Haifa_campaign_info.toml  Kosetice_campaign_info.toml  Kuopio_campaign_info.toml  Leipzig_campaign_info_1.toml  Leipzig_campaign_info_2.toml  Leipzig_campaign_info_4.toml  Leipzig_campaign_info_6.toml  Leipzig_campaign_info_8.toml  Limassol_campaign_info_1.toml  Melpitz_campaign_info.toml  Punta_Arenas_campaign_info.toml  Warsaw_campaign_info.toml  campaign_list.toml  labview_key_2_earlinet_key_spec.toml  metadata.toml  metadata_klett.toml  metadata_klett_raman.toml  metadata_raman.toml  picasso_key_2_earlinet_key_spec.toml
data/: 20190723_1900_lei_arielle_b1064.nc  20190723_1900_lei_arielle_b355.nc  20190723_1900_lei_arielle_b532.nc  20190723_1900_lei_arielle_e355.nc  20190723_1900_lei_arielle_e532.nc  2019_08_04_Sun_LACROS_00_00_01_0100_0230_profiles.nc  2020_04_09_Thu_TROPOS_00_00_01_0000_0059_profiles.nc  2020_05_06_Wed_TROPOS_00_00_01_0000_0059_profiles.nc  dushanbe-20150803_1800-2159-99smooth-info.txt  dushanbe-20150803_1800-2159-99smooth.txt  fernald-20120213_0400_0515-3smooth-info.txt  fernald-20120213_0400_0515-3smooth.txt  le_arielle-20190723_2100-0058-49smooth-info.txt  (+6 more)
doc/: dev_log.md  (+5 more)
(+18 files in other folders)
