[metadata]
name = polly2SCC

author = Zhenping Yin
author-email = zp.yin@whu.edu.cn
maintainer = Zhenping Yin
maintainer-email = zp.yin@whu.edu.cn
summary = Package for converting the polly profiles to netCDF4 files with EARLINET data fromat.
description-file = readme.md
home-page = https://github.com/PollyNET/polly_2_earlinet_convertor
license = MIT
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
zip_safe = False
keywords =
    polly
    SCC
    netCDF4

[files]
packages =
    src
    config
    include

[entry_points]
console_scripts =
    p2e_go=src.polly_2_earlinet_convertor:main
