[metadata]
name = polly2scc

author = Zhenping Yin
author-email = zp.yin@whu.edu.cn
maintainer = Zhenping Yin
maintainer-email = zp.yin@whu.edu.cn
summary = Package for converting the polly profiles to netCDF4 files with EARLINET data fromat.
description-file = readme.md
home-page = https://github.com/PollyNET/polly2scc
license = MIT
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
zip_safe = False
keywords =
    polly
    SCC
    netCDF4

[files]
packages =
    src
    config
    include

[entry_points]
console_scripts =
    polly2scc=src.polly2scc:main
